[package]
name = "vxlan-to-http"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = {version = "6.0.1", features = ["inline"]}
num_cpus = "1.16.0"
parking_lot = "0.12.3"
pnet = "0.35.0"
r2d2 = "0.8.10"
tracing = "0.1.40"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
